--- a/Project01/System_Monitor_Temperature_Humidity_Via_Wifi/platformio.ini
+++ b/Project01/System_Monitor_Temperature_Humidity_Via_Wifi/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+monitor_speed = 115200
+monitor_filters = time
+lib_deps = 
+	adafruit/Adafruit Unified Sensor@^1.1.15
+	adafruit/DHT sensor library@^1.4.6
