--- a/Project01/System_Monitor_Temperature_Humidity_Via_Wifi/platformio.ini
+++ b/Project01/System_Monitor_Temperature_Humidity_Via_Wifi/platformio.ini
@@ -17,3 +17,5 @@ monitor_filters = time
 lib_deps = 
 	adafruit/Adafruit Unified Sensor@^1.1.15
 	adafruit/DHT sensor library@^1.4.6
+	adafruit/Adafruit GFX Library@^1.12.4
+	adafruit/Adafruit SSD1306@^2.5.16
