develop success module send data firebase and complete develop firmware

--- a/Project01/System_Monitor_Temperature_Humidity_Via_Wifi/platformio.ini
+++ b/Project01/System_Monitor_Temperature_Humidity_Via_Wifi/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.6
 	adafruit/Adafruit GFX Library@^1.12.4
 	adafruit/Adafruit SSD1306@^2.5.16
+	mobizt/Firebase ESP32 Client@^4.4.17
