--- a/Project03/System_Measure_Level_Water_And_Warning/platformio.ini
+++ b/Project03/System_Measure_Level_Water_And_Warning/platformio.ini
@@ -14,3 +14,6 @@ board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
 monitor_filters = time
+lib_deps = 
+	adafruit/Adafruit GFX Library@^1.12.4
+	adafruit/Adafruit SSD1306@^2.5.16
